--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
