--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
