--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "flag-icon-css": "^4.1.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-flag-icon-css": "^1.0.25",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -60,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-flag-icon-css": "^1.0.10",
     "tailwindcss": "^3.3.3"
   }
 }
